# mpd-lyricsd

./: Cargo.toml  README.md
src/: genius.rs  main.rs
