[package]
name = "mpd-lyricsd"
version = "0.1.0"
edition = "2021"
description = "Lyrics fetching service for MPD."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpd_client = "1.0.0"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "net", "macros", "fs"] }
universal-config = "0.1.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
scraper = "0.15.0"
regex = "1.7.1"
anyhow = "1.0.69"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.16", features = ["env-filter"] }